--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <html>
   <head>
-    <title>My blog</title>
+    <title>Ciara's Blog</title>
   <body>
-    <h1>Kia ora Taiao! (Hello World!)</h1> 
-    <p> This is the beginning of my website home page.</p>
-    <p> It will eventually contain a list of links to all my blogs. </p>
+    <h1>Kia ora! This is Ciara's Blog!</h1> 
+    <p> Click on any of the blogs below to find out what's going on with me!</p>
+    <p> You may laugh, you may cry, but you are most likely to feel benevolent boredom. </p>
+  <h2>View All Blog Posts</h2>
+  <a href="blog1.html" target="_blank">First Blog</a>
   </body>
 </html>
