--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <p> Click on any of the blogs below to find out what's going on with me!</p>
     <p> You may laugh, you may cry, but you are most likely to feel benevolent boredom. </p>
   <h2>View All Blog Posts</h2>
-  <a href="blog1.html" target="_blank">First Blog</a>
-  </body>
+ <table>
+ <tr>
+  <td><a href="blog1.html" target="_blank">First Blog</a></td>
+  <td><a href="blog2.html" target="_blank">Second Blog</a></td>
+ <td><a href="blog3.html" target="_blank">Third Blog</a></td>
+</tr>
+<tr>
+ <td><a href="blog4.html" target="_blank">Fourth Blog</a></td>
+ <td> <a href="blog5.html" target="_blank">Fifth Blog</a></td>
+  </tr>
+</table>
+</body>
 </html>
