Added viewport meta tag

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title>Ciara's Blog</title>
+   <!-- // below is a viewport meta tag -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   <body>
     <h1>Kia ora! This is Ciara's Blog!</h1> 
     <p> Click on any of the blogs below to find out what's going on with me!</p>
