--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Ciara's Blog</title>
+    <link href="styles/main.css" rel="stylesheet" type="text/css">
    <!-- // below is a viewport meta tag -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
   <body>
