--- a/blog5.html
+++ b/blog5.html
@@ -2,6 +2,8 @@
 <html>
   <header>
     <title>Sprint 5 Blog</title>
+    <link href="styles/main.css" rel="stylesheet" type="text/css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </header>
   <body>
     <h1>Sprint 5 Blog</h1>
