--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   <body>
     <h1>Kia ora! This is Ciara's Blog!</h1> 
+    <img class="responsive-img" src="images/WgVpOn-1091736715.jpeg" alt="Beautiful Sunset">
+
     <p> Click on any of the blogs below to find out what's going on with me!</p>
     <p> You may laugh, you may cry, but you are most likely to feel benevolent boredom. </p>
-  <h2>View All Blog Posts</h2>
+  
+<h2>View All Blog Posts</h2>
  <table>
  <tr>
   <td><a href="blog1.html" target="_blank">First Blog</a></td>
