--- a/blog1.html
+++ b/blog1.html
@@ -2,9 +2,13 @@
 <html>
   <header>
     <title>Sprint 1 Blog</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Caladea:ital@1&family=Pacifico&display=swap" rel="stylesheet"> 
     <link href="styles/main.css" rel="stylesheet" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-  </header>
+    </header>
+  
   <body>
     <h1>Sprint 1 Blog</h1>
   </body>
