added text to blog1

--- a/blog1.html
+++ b/blog1.html
@@ -11,5 +11,48 @@
   
   <body>
     <h1>Sprint 1 Blog</h1>
+
+    <h2>A situation where I made an ethical decision</h2>
+
+    <p>Recently, I attended a Vipassana meditation course. It is a 10-day long course where you cannot talk, read books, write, use your phone etc - and you meditate for 10-11 hrs each day. Everyone who commits to the course is really serious about attending, including me. Plus, all the people running the course are volunteers. So they ask that everyone who is attending to come with a negative RAT.
+    </p>
+    <p>On the set up day we were allowed to talk, and I met someone who said she was asked to take 2 RATs since the first one had a very faint second line. But as the second test was negative, she demonstrated a very flippant attitude about the situation. I was concerned that this person was taking the virus to the course and debated for a while with myself whether it would be right to bring up my concerns with the people running it. 
+    </p>
+    <p>I did not want to put this person in a position where she had to go home and miss out on the course, but I also did not want to be complacent if my health or the health of others was at risk. I also did not feel comfortable questioning saying to this person’s face that I felt uncomfortable or questioning her too much as I did not want that to be one of the last conversations I had in 10 days. But going behind someone’s back also felt dishonest - what a pickle!
+    </p>
+    <p>In the end I did go and say something to one of the people running the course, and they asked her to take another test. Despite the fact that I wasn’t stoked about going behind her back, I am glad I made that decision. I think the registration people were more receptive to my concerns than the person would have been, I was protecting my own boundaries, and I was taking action for the potential benefit of the wider group.
+    </p>
+
+    <h2>How my culture and the people around me have influenced my values and identity</h2>
+    <p>I moved around a lot as a child so did not really grow up with a solidified community/culture. My dad works a lot but is still very generous with his time so I guess I have picked up on a bit of that Dutch mindset about simultaneously hoarding resources and practicing benevolence. 
+    </p>
+    <p>After finishing school, I spent some time down south with my mum’s wider family there & their culture largely centres around drinking, conservatism, jetboating, farming, and investing in the housing market, much of which I am not overly interested in. But I did love how communal my family is - in that space, you can fully trust that anyone will do anything for you.
+    </p>
+    <p>On the flip side, my dad’s wider family is much smaller so there isn’t as much of that community. But they have done more travel & are more open-minded in a lot of ways. I resonate with their values more but also value the conservative side of my family because it gives me a chance to connect with a lot of different perspectives. The ability to learn from & give back to & connect a wide range of people is a very important value for me.
+    </p>
+
+    <h2>My strengths and how they will support me through my learning journey. 
+    </h2>
+    <p>I am a very hard worker & am also learning to practice better self-care, which I think will benefit me a lot on my learning journey. I am also pretty good at problem solving - hope that translates into this course too! Plus I think because I am quite empathetic & because this course emphasises good human skills, I will get to learn how to integrate soft skills and technical skills and make both better.
+    </p>
+
+    <h2>My learning limitations</h2>
+    <p>I struggle with impatience and getting down on myself when things get too challenging. I often rush through new things expecting to be good at them straight away - rarely the case, especially when I don’t give things the proper time. When I take breaks from things I also feel guilty for taking breaks! Not ideal. The common theme here is I put a lot of pressure on myself which really does more harm than good.
+
+    </p>
+
+    <h2>An example of resistance or tension when I was trying to work productively with others. 
+</h2>
+    <p>Recently I helped mediate a conflict between a couple of people in my community. We all showed up open to participate in mediation, but there was a lot of tension between the two parties. One was dismissive of the idea that mediation would be effective and the other was unwilling to take accountability for their actions. 
+    </p>
+    <p>I used active listening to demonstrate to both sides that I understood where they were coming from & reminded them to use active listening as a tool as well. It was reasonably effective for much of the conversation but less so towards the end. I learned that demonstrating good strategies can help but in situations like this, everyone has to meet in the middle.
+    </p>
+    <p>We took short breaks and that was a great way to keep everyone engaged and not let tension get too bad.
+    </p>
+    <p>I also tried breaking the problem into smaller parts so we could focus on one thing at a time, again this made it much easier for most of the people in the conversation to see a potential positive outcome. However, not everyone was willing to break the wider whole into smaller parts. 
+    </p>
+    <p>If I were to go back to that conversation, I would probably come prepared with more of these problem solving frameworks to help prevent the conversation from spiralling out of control. I would also get help from someone a bit more assertive to balance out my “gentle guidance” strategies. Too much assertion or being too gentle would be less effective in this situation than having a bit of both.
+    </p>
+
   </body>
 </html>
