--- a/blog1.html
+++ b/blog1.html
@@ -54,5 +54,7 @@
     <p>If I were to go back to that conversation, I would probably come prepared with more of these problem solving frameworks to help prevent the conversation from spiralling out of control. I would also get help from someone a bit more assertive to balance out my “gentle guidance” strategies. Too much assertion or being too gentle would be less effective in this situation than having a bit of both.
     </p></div>
 
+    <h3>Return to <a href="index.html">Homepage</a></h3>
+
   </body>
 </html>
