added read more button

--- a/index.html
+++ b/index.html
@@ -12,15 +12,19 @@
     <h1>Kia ora! This is Ciara's Blog!</h1> 
     <img class="responsive-img" src="images/WgVpOn-1091736715.jpeg" alt="Beautiful Sunset">
 
-    <p> Click on any of the blogs below to find out what's going on with me!</p>
+    <div><p> Click on any of the blogs below to find out what's going on with me!</p>
     <p> You may laugh, you may cry, but you are most likely to feel benevolent boredom. </p>
-  
+  </div>
 <h2>View All Blog Posts</h2>
  <table>
  <tr>
+  <span>
   <td><a href="blog1.html" target="_blank">First Blog</a></td>
-  <td><a href="blog2.html" target="_blank">Second Blog</a></td>
- <td><a href="blog3.html" target="_blank">Third Blog</a></td>
+  </span>
+  <span>
+  <td><a href="blog2.html" target="_blank">Second Blog</a></td></span>
+  <span>
+ <td><a href="blog3.html" target="_blank">Third Blog</a></td></span>
 </tr>
 <tr>
  <td><a href="blog4.html" target="_blank">Fourth Blog</a></td>
