--- a/blog1.html
+++ b/blog1.html
@@ -12,6 +12,20 @@
   <body>
     <h1>Sprint 1 Blog</h1>
 
+    <div class="container">
+        <input type="checkbox" id="check">
+        <h2>A situation where I made an ethical decision</h2>
+        <div class="content"><p>Recently, I attended a Vipassana meditation course. It is a 10-day long course where you cannot talk, read books, write, use your phone etc - and you meditate for 10-11 hrs each day. Everyone who commits to the course is really serious about attending, including me. Plus, all the people running the course are volunteers. So they ask that everyone who is attending to come with a negative RAT.
+        </p>
+        <p>On the set up day we were allowed to talk, and I met someone who said she was asked to take 2 RATs since the first one had a very faint second line. But as the second test was negative, she demonstrated a very flippant attitude about the situation. I was concerned that this person was taking the virus to the course and debated for a while with myself whether it would be right to bring up my concerns with the people running it. 
+        </p>
+        <p>I did not want to put this person in a position where she had to go home and miss out on the course, but I also did not want to be complacent if my health or the health of others was at risk. I also did not feel comfortable questioning saying to this person’s face that I felt uncomfortable or questioning her too much as I did not want that to be one of the last conversations I had in 10 days. But going behind someone’s back also felt dishonest - what a pickle!
+        </p>
+        <p>In the end I did go and say something to one of the people running the course, and they asked her to take another test. Despite the fact that I wasn’t stoked about going behind her back, I am glad I made that decision. I think the registration people were more receptive to my concerns than the person would have been, I was protecting my own boundaries, and I was taking action for the potential benefit of the wider group.
+        </p></div>
+        <label for="check">Read More</label>
+    </div>
+
     <h2>A situation where I made an ethical decision</h2>
 
     <div><p>Recently, I attended a Vipassana meditation course. It is a 10-day long course where you cannot talk, read books, write, use your phone etc - and you meditate for 10-11 hrs each day. Everyone who commits to the course is really serious about attending, including me. Plus, all the people running the course are volunteers. So they ask that everyone who is attending to come with a negative RAT.
