--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <img class="responsive-img" src="images/WgVpOn-1091736715.jpeg" alt="Beautiful Sunset">
 <br>
     <div><p> Click on any of the blogs below to find out what's going on with me!</p>
-    <p> You may laugh, you may cry, but you are most likely to feel benevolent boredom. </p>
+    <p> You may laugh, you may cry, but you are most likely to feel <span>benevolent boredom.</span> </p>
   </div>
   <br>
 <h2>View All Blog Posts</h2>
