added image center aligned

--- a/blog1.html
+++ b/blog1.html
@@ -11,7 +11,11 @@
   
   <body>
     <h1>Sprint 1 Blog</h1>
- <br><br>
+ <br>
+ <div class="middle">
+ <img class="responsive-img" src="images/horse-herd-run-at-sunset-picture-id1072271942-1439880072.jpeg" alt="Horse Running at Sunset">
+ </div>
+ <br>
     <div class="container">
         <input type="checkbox" id="check">
         <h2>A situation where I made an ethical decision</h2>
