--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   <body>
 
-    <h1>Kia ora! This is Ciara's Blog!</h1>
+    <h1 class="homepagetitle">Kia ora! This is Ciara's Blog!</h1>
     <br> 
     <img class="responsive-img" src="images/WgVpOn-1091736715.jpeg" alt="Beautiful Sunset">
 <br>
@@ -34,5 +34,6 @@
  <td> <a href="blog5.html" target="_blank">Fifth Blog</a></td>
   </tr>
 </table>
+<br>
 </body>
 </html>
