adding text and image content to technical blog

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <td><a href="blog1.html" target="_blank">First Blog</a></td>
   </span>
   <span>
-  <td><a href="blog2.html" target="_blank">Second Blog</a></td></span>
+  <td><a href="blog/html-css.html" target="_blank">CSS Element Positioning</a></td></span>
   <span>
  <td><a href="blog3.html" target="_blank">Third Blog</a></td></span>
 </tr>
