changed blog 1 to identity and values blog

--- a/identity-values.html
+++ b/identity-values.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang-"en">
   <header>
-    <title>Sprint 1 Blog</title>
+    <meta charset="UTF-8">
+    <title>Identity/Values</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Caladea:ital@1&family=Pacifico&display=swap" rel="stylesheet"> 
