moved identity and values blog

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
  <table>
  <tr>
   <span>
-  <td><a href="identity-values.html" target="_blank">Identity and Values</a></td>
+  <td><a href="blog/identity-values.html" target="_blank">Identity and Values</a></td>
   </span>
   <span>
   <td><a href="blog/html-css.html" target="_blank">CSS Element Positioning</a></td></span>
