deleted some html i accidentally pasted in css file

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Ciara's Blog</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -27,7 +27,7 @@
   <span>
   <td><a href="blog/html-css.html" target="_blank">CSS Element Positioning</a></td></span>
   <span>
- <td><a href="blog3.html" target="_blank">Third Blog</a></td></span>
+ <td><a href="blog/learning-plan.html" target="_blank">Learning Plan</a></td></span>
 </tr>
 <tr>
  <td><a href="blog4.html" target="_blank">Fourth Blog</a></td>
