internal links no longer open in new tab

--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
  <table>
  <tr>
   <span>
-  <td><a href="blog/identity-values.html" target="_blank">Identity and Values</a></td>
+  <td><a href="blog/identity-values.html">Identity and Values</a></td>
   </span>
   <span>
-  <td><a href="blog/html-css.html" target="_blank">CSS Element Positioning</a></td></span>
+  <td><a href="blog/html-css.html">CSS Element Positioning</a></td></span>
   <span>
- <td><a href="blog/learning-plan.html" target="_blank">Learning Plan</a></td></span>
+ <td><a href="blog/learning-plan.html">Learning Plan</a></td></span>
 </tr>
 <tr>
- <td><a href="blog4.html" target="_blank">Fourth Blog</a></td>
- <td> <a href="blog5.html" target="_blank">Fifth Blog</a></td>
+ <td><a href="blog4.html">Fourth Blog</a></td>
+ <td> <a href="blog5.html">Fifth Blog</a></td>
   </tr>
 </table>
 <br>
