added blog about emotional intelligence

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
  <td><a href="blog/learning-plan.html">Learning Plan</a></td></span>
 </tr>
 <tr>
- <td><a href="blog4.html">Fourth Blog</a></td>
+ <td><a href="blog/emotional-intelligence.html">Emotional Intelligence</a></td>
  <td> <a href="blog5.html">Fifth Blog</a></td>
   </tr>
 </table>
