started javascript blog

--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   <body>
 
-    <h1 class="homepagetitle">Kia ora! This is Ciara's Blog!</h1>
+    <h1 class="homepageLayer">Kia ora! This is Ciara's Blog!</h1>
     <br> 
     <img class="responsive-img" src="images/WgVpOn-1091736715.jpeg" alt="Beautiful Sunset">
 <br>
-    <div><p> Click on any of the blogs below to find out what's going on with me!</p>
+    <div class="tidy-text"><p> Click on any of the blogs below to find out what's going on with me!</p>
     <p> You may laugh, you may cry, but you are most likely to feel <span>benevolent boredom.</span> </p>
   </div>
   <br>
-<h2>View All Blog Posts</h2>
+<h2 class="tidy-text">View All Blog Posts</h2>
 <br>
- <table>
+ <table class="tidy-text">
  <tr>
   <span>
   <td><a href="blog/identity-values.html">Identity and Values</a></td>
@@ -31,7 +31,7 @@
 </tr>
 <tr>
  <td><a href="blog/emotional-intelligence.html">Emotional Intelligence</a></td>
- <td> <a href="blog5.html">Fifth Blog</a></td>
+ <td> <a href="blog/javascript-dom.html">JavaScript Fundamentals</a></td>
   </tr>
 </table>
 <br>
