improved read more buttons and started neuroplasticity blog

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 <tr>
  <td><a href="blog/emotional-intelligence.html">Emotional Intelligence</a></td>
  <td> <a href="blog/javascript-dom.html">JavaScript Fundamentals</a></td>
+ <td> <a href="blog/neuroplasticity.html">Neuroplasticity</a></td>
+
   </tr>
 </table>
 <br>
