completed problem solving blog

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
   <td><a href="blog/html-css.html">CSS Element Positioning</a></td></span>
   <span>
  <td><a href="blog/learning-plan.html">Learning Plan</a></td></span>
+ <td> <a href="blog/problem-solving.html">Problem Solving</a></td>
+
 </tr>
 <tr>
  <td><a href="blog/emotional-intelligence.html">Emotional Intelligence</a></td>
