--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
  <td><a href="blog/emotional-intelligence.html">Emotional Intelligence</a></td>
  <td> <a href="blog/javascript-dom.html">JavaScript Fundamentals</a></td>
  <td> <a href="blog/neuroplasticity.html">Neuroplasticity</a></td>
-
+ <td> <a href="blog/foundations-reflection.html">Foundations Reflection</a></td>
   </tr>
 </table>
 <br>
