added generative art

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <span>
  <td><a href="blog/learning-plan.html">Learning Plan</a></td></span>
  <td> <a href="blog/problem-solving.html">Problem Solving</a></td>
-
+ <td> <a href="../generative-art/index.html">Swirly Generative Art</a></td>
 </tr>
 <tr>
  <td><a href="blog/emotional-intelligence.html">Emotional Intelligence</a></td>
