added purple iteration

--- a/index.html
+++ b/index.html
@@ -29,13 +29,14 @@
   <span>
  <td><a href="blog/learning-plan.html">Learning Plan</a></td></span>
  <td> <a href="blog/problem-solving.html">Problem Solving</a></td>
- <td> <a href="art/index.html">Swirly Generative Art</a></td>
+ <td> <a href="art/index.html">Swirly Green Generative Art</a></td>
 </tr>
 <tr>
  <td><a href="blog/emotional-intelligence.html">Emotional Intelligence</a></td>
  <td> <a href="blog/javascript-dom.html">JavaScript Fundamentals</a></td>
  <td> <a href="blog/neuroplasticity.html">Neuroplasticity</a></td>
  <td> <a href="blog/foundations-reflection.html">Foundations Reflection</a></td>
+ <td> <a href="art/purple.html">Swirly Purple Generative Art</a></td>
   </tr>
 </table>
 <br>
